--- a/src/client/app/layout/ht-top-nav.html
+++ b/src/client/app/layout/ht-top-nav.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-header">
-    <a href="/" class="navbar-brand"><span class="brand-title">{{vm.navline.title}}</span></a>
-    <a class="btn navbar-btn navbar-toggle" ng-click="isCollapsed = !isCollapsed">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </a>
-  </div>
-  <div class="navbar-collapse collapse" uib-collapse="isCollapsed">
-    <div class="pull-right navbar-logo">
-      <ul class="nav navbar-nav pull-right">
+    <div class="navbar-header">
+        <a href="/" class="navbar-brand"><span class="brand-title">{{vm.navline.title}}</span></a>
+        <a class="btn navbar-btn navbar-toggle" ng-click="isCollapsed = !isCollapsed">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </a>
+    </div>
+    <div class="navbar-collapse collapse" uib-collapse="isCollapsed">
+        <div class="pull-right navbar-logo">
+            <!--<ul class="nav navbar-nav pull-right">
         <li>
           <a ng-href="{{vm.navline.link}}" target="_blank">
                         {{vm.navline.text}}
@@ -25,7 +25,7 @@
             <img src="images/gulp-tiny.png" />
           </a>
         </li>
-      </ul>
+      </ul>-->
+        </div>
     </div>
-  </div>
 </nav>
